# ministo

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
scripts/linux/: build-monerod.sh  build-p2pool.sh  build-xmrig.sh  build.sh  dev.sh
scripts/windows/: build-xmrig.bat
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icons.icns
src-tauri/src/: config.rs  main.rs  monerod.rs  p2pool.rs  settings.rs  xmrig.rs
src-tauri/src/config/: daemon.rs  mod.rs  pool.rs
src-tauri/src/permissions/: unix.rs
src-tauri/tests/: common.rs  first_time_setup.rs
