[package]
name = "app"
version = "0.1.0"
description = "A simple monero mining application"
authors = ["Charlie Wilkin", "Vennila Pugazhenthi"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
num_cpus = "1"
tauri-build = { version = "1.0.0-rc", features = [] }

[dependencies]
ansi-to-html = "0.1"
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
tauri = { version = "1.0.0-rc", features = ["shell-execute"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
lto = true
