[package]
name = "app"
version = "0.1.0"
description = "A simple monero mining application"
authors = ["Charlie Wilkin", "Vennila Pugazhenthi"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
num_cpus = "1"
tauri-build = { version = "1.0.0-rc", features = [] }

[dependencies]
anyhow = "1"
ansi-to-html = "0.1"
clap = "3"
env_logger = "0.9"
home = "0.5"
log = "0.4"
libc = "0.2"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The shell-execute feature is needed because sidecars won't stop themselves otherwise.
#tauri = { version = "1.0.0-rc", features = ["clipboard-write-text", "dialog-open", "shell-sidecar"] }
tauri = { path = "../../tauri/core/tauri", features = ["clipboard-write-text", "dialog-open", "shell-sidecar"] }
tokio = { version = "1", features = ["macros"] }
url = "2"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
lto = true
